fix ugly toplevel overflow

--- a/main.scss
+++ b/main.scss
@@ -26,6 +26,7 @@ header, footer {
 header {
   $font-size: 32px;
   align-items: center;
+  overflow-x: hidden;
   white-space: nowrap;
   /* https://stackoverflow.com/questions/5078239/how-do-i-remove-the-space-between-inline-block-elements */
   font-size: 0;
